--- a/client/src/styles/order.css
+++ b/client/src/styles/order.css
@@ -5,21 +5,52 @@
 
 .order-hero {
   width: 100%;
+  height: auto;
+}
+
+.hero-background {
+  width: 100%;
   min-height: 500px;
   height: auto;
   background-image: url("../images/order.jpg");
-  background-position: center;
+  background-position: 50% 110%;
   background-size: cover;
   background-repeat: no-repeat;
+  background-attachment: fixed;
   filter: grayscale(100%);
-
+}
+.hero-text {
+  position: absolute;
+  display: block;
+  width: 100%;
+  height: 100%;
+  top: 0px;
+  text-align: center;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   color: var(--primary);
 }
 
+.hero-text p {
+  padding: 12px;
+  width: 50%;
+  color: var(--white);
+  font-weight: bold;
+}
+
 .order-container {
   width: 100%;
   margin: auto;
+}
+
+@media (max-width: 720px) {
+  .hero-text h3 {
+    line-height: 64px;
+  }
+  .hero-text p {
+    margin: 18px 0;
+    width: 100%;
+  }
 }
