--- a/client/src/styles/variables.css
+++ b/client/src/styles/variables.css
@@ -38,7 +38,7 @@
   --fs-sm: 16px;
   --fs-xs: 13px;
   /* font families Roboto/Mulish/Lato/inter */
-  --ff-1: "Pacifico";
+  --ff-1: "Roboto";
   --ff-2: "Inter";
 }
 
@@ -56,7 +56,7 @@ h2 {
 }
 h3 {
   font-size: var(--fs-h3);
-  font-weight: 100;
+  font-weight: 400;
 }
 h4 {
   font-size: var(--fs-h4);
